fixes alignment issues for all graphs

--- a/src/assets/styles/components/_custom-svg.scss
+++ b/src/assets/styles/components/_custom-svg.scss
@@ -12,3 +12,12 @@
     top: 0;
     left: 0;
 }
+
+.svg-line-chart-container {
+    display: inline-block;
+    position: relative;
+    // width: 100%;
+    // padding-bottom: 100%;
+    vertical-align: top;
+    overflow: hidden;
+}
